--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
   <script src="lib/angular/angular.js"></script>
   <script src="app.js"></script>
-  <script src="phone-list.component.js"></script>
+  <script src="phone-list/phone-list.component.js"></script>
 </head>
 <body ng-controller="PhoneListController">
 
