--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="en" ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
-  <title>My HTML File</title>
+  <title>Phone Application</title>
+  <link rel="icon" href="img/smartphone.png" />
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
   <script src="lib/angular/angular.js"></script>
   <script src="app.js"></script>
@@ -10,14 +11,8 @@
 </head>
 <body ng-controller="PhoneListController">
 
-  <p>Hello, {{name}}!</p>
-
   <phone-list></phone-list>
 
-  <table>
-    <tr><th>Row number</th></tr>
-    <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td>{{i+1}}</td></tr>
-  </table>
-
+  <div>Icons made by <a href="https://www.flaticon.com/authors/chanut" title="Chanut">Chanut</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 </html>
